// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`almost eligible > requirements almost met 1`] = `
[
  {
    "text": "31 days until FTRD (Sep 1, 2022)",
    "tooltip": undefined,
  },
]
`;

exports[`fully eligible > requirements met 1`] = `
[
  {
    "text": "210 days past FTRD (Jan 3, 2022)",
    "tooltip": undefined,
  },
]
`;
